--- a/share-point/public/index.html
+++ b/share-point/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+            type="text/javascript"
+            src="https://maps.googleapis.com/maps/api/js?v=3.44&amp;libraries=geometry,drawing,places&amp;key=AIzaSyDb_hQap88mHAJJFFJ6W8-WqKDeGuvHUm4"
+    ></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
