--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
             type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?v=3.44&amp;libraries=geometry,drawing,places&amp;key=AIzaSyDb_hQap88mHAJJFFJ6W8-WqKDeGuvHUm4"
     ></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/gmapkeydrag.js"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
